--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,21 @@ services:
       PORT: 8080
       RABBITMQ_URI: "amqp://guest:guest@rabbitmq:5672/"
 
+  stockbot:
+    build:
+      context: ./stockbot
+      dockerfile: Dockerfile.dev
+    ports:
+      - "8081:8081"
+    depends_on:
+      - chat-api
+      - mongodb
+      - rabbitmq
+    restart: unless-stopped
+    environment:
+      PORT: 8181
+      RABBITMQ_URI: "amqp://guest:guest@rabbitmq:5672/"
+
   mongodb:
     image: mongo:6.0
     container_name: mongodb
